--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "react-bootstrap": "^1.4.3"
+    "react-quiz-component": "^0.3.8",
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
