--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react-bootstrap": "^1.4.3"
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
+    "react-router-dom": "^5.2.0"
   }
 }
