--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^3.4.1",
     "connect-mongo": "^2.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "if-env": "^1.0.4",
-    "mongoose": "^5.3.4",
+    "mongoose": "^5.11.15",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-bootstrap": "^1.4.3",
+    "react-bootstrap-validation": "^0.1.11"
   }
 }
