--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "bootstrap": "^3.4.1",
+    "react-bootstrap": "^1.4.3",
+    "react-bootstrap-validation": "^0.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
