--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
+    "material-table": "^1.69.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.8.6",
