--- a/package.json
+++ b/package.json
@@ -28,17 +28,22 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.18.1",
     "bcrypt": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.0",
     "connect-mongo": "^2.0.1",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "if-env": "^1.0.4",
+    "install": "^0.13.0",
+    "material-table": "^1.69.2",
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
+    "npm": "^7.5.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^17.0.1",
