--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.8.6",
     "react-quiz-component": "^0.3.8",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
