--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.8.6",
     "react-quiz-component": "^0.3.8",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
