--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "project3-starter-auth",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -14,7 +15,8 @@
     "react-dom": "^16.8.6",
     "react-quiz-component": "^0.3.8",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "mdbreact": "4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
