--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "passport-local": "^1.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-quiz-component": "^0.3.8",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "react-quiz-component": "^0.3.8"
+    "redux": "^4.0.5"
   }
 }
