--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "mdbreact": "4.11.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.4.3",
+    "react-confetti": "^6.0.0",
     "react-dom": "^16.8.6",
     "react-quiz-component": "^0.3.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
-    "react-twitter-embed": "^3.0.3"
+    "react-twitter-embed": "^3.0.3",
+    "react-use": "^17.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
