--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport-local": "^1.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-confetti": "^6.0.0",
     "react-quiz-component": "^0.3.8",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
