--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,14 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "confetti": "^1.1.1",
     "dotenv": "^8.2.0",
     "jquery": "^3.5.1",
     "material-table": "^1.69.2",
     "mdbreact": "4.11.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.4.3",
-    "react-confetti": "^6.0.0",
+    "react-confetti": "^6.0.1",
     "react-dom": "^16.8.6",
     "react-quiz-component": "^0.3.8",
     "react-router-dom": "^5.2.0",
